# PQ-DAS

./: .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md
.github/workflows/: pdf.yml
PQ-DAS Docs/: Benchmark Comparison.md  LeanVM Implementation Plan.md  PQ-DAS Distributed Blob Proving.md  PQ-DAS Optimization Checklist.md  PQ-DAS V1 Design.md  PQ-DAS V2 Demo.md  PQ-DAS V2 Design.md  PQ-DAS V3 Demo.md  PQ-DAS V3 Design.md
PQ-DAS-V1/: PQ-DAS Optimization Checklist.md  PQ-DAS V1 Demo.md  PQ-DAS V1 Optimizations.md  comparison with Tau's demo.md
benchmark-results/server/20260613T211622Z_eaa63ea6fc61/: SUMMARY.md  machine.txt  results.csv
crates/backend/: Cargo.toml
crates/backend/air/: Cargo.toml
crates/backend/air/src/: symbolic.rs
crates/backend/fiat-shamir/: Cargo.toml
crates/backend/fiat-shamir/src/: challenger.rs  lib.rs  merkle_pruning.rs  prover.rs  utils.rs  verifier.rs
crates/backend/fiat-shamir/tests/: grinding.rs
crates/backend/field/: Cargo.toml
crates/backend/field/src/: field.rs  lib.rs
crates/backend/koala-bear/: Cargo.toml
crates/backend/koala-bear/src/: benchmark_poseidons.rs
crates/backend/koala-bear/src/quintic_extension/: packed_extension.rs
crates/backend/parallel/: Cargo.toml
crates/backend/parallel/src/: lib.rs
crates/backend/poly/: Cargo.toml
crates/backend/poly/src/: eq_mle.rs  evals.rs  lib.rs  multilinear_utils.rs  next_mle.rs  utils.rs
crates/backend/poly/src/mle/: mle_group_owned.rs  mle_group_ref.rs  mle_single_owned.rs  mle_single_ref.rs
crates/backend/src/: lib.rs
crates/backend/sumcheck/: Cargo.toml
crates/backend/sumcheck/src/: product_computation.rs  prove.rs  sc_computation.rs  split_eq.rs
crates/backend/symetric/: Cargo.toml
crates/backend/symetric/src/: lib.rs  merkle.rs  poseidon_utils.rs  sponge.rs
crates/backend/system-info/: build.rs
crates/backend/system-info/src/: lib.rs
crates/backend/utils/: Cargo.toml
crates/backend/utils/src/: lib.rs  misc.rs
crates/backend/zk-alloc/: Cargo.toml
crates/backend/zk-alloc/src/: arena_cow.rs  arena_vec.rs  lib.rs  syscall.rs
crates/backend/zk-alloc/tests/: test_alloc.rs
crates/lean_compiler/: Cargo.toml  snark_lib.py  zkDSL.md
crates/lean_compiler/src/: b_compile_intermediate.rs  c_compile_final.rs  instruction_encoder.rs  lang.rs  lib.rs
crates/lean_prover/: Cargo.toml
crates/lean_vm/: Cargo.toml
crates/pq_das/: Cargo.toml  README.md
crates/rec_aggregation/: Cargo.toml
crates/sub_protocols/: Cargo.toml
crates/whir/: Cargo.toml
crates/whir/src/: commit.rs  config.rs  dft.rs  matrix.rs  merkle.rs  open.rs  utils.rs  verify.rs
crates/whir/tests/: run_whir.rs
crates/xmss/: Cargo.toml
misc/: minimal_zkVM.tex
scripts/: benchmark-pq-das-profiling.sh  summarize_pq_das_profiling.py
src/: lib.rs  main.rs
tests/: test_multisignatures.rs  test_zk_alloc.rs
(+97 files in other folders)
