[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
symetric = { path = "symetric", package = "symetric" }
poly = { path = "poly", package = "poly" }
sumcheck = { path = "sumcheck", package = "sumcheck" }
field = { path = "field", package = "field" }
air = { path = "air", package = "air" }
parallel.workspace = true
whir = { path = "../whir", package = "whir" }
fiat-shamir = { path = "fiat-shamir", package = "fiat-shamir" }
koala-bear = { path = "koala-bear", package = "koala-bear" }
utils = { path = "utils", package = "utils" }
zk-alloc.workspace = true
