[package]
name = "whir"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../backend/field", package = "field" }
koala-bear = { path = "../backend/koala-bear", package = "koala-bear" }
poly = { path = "../backend/poly", package = "poly" }
sumcheck = { path = "../backend/sumcheck", package = "sumcheck" }
zk-alloc.workspace = true
fiat-shamir = { path = "../backend/fiat-shamir", package = "fiat-shamir" }
utils = { path = "../backend/utils", package = "utils" }
symetric = { path = "../backend/symetric", package = "symetric" }
system-info.workspace = true

parallel.workspace = true
rand.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-forest.workspace = true
tracing-subscriber.workspace = true
