[package]
name = "fiat-shamir"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "field" }
koala-bear = { path = "../koala-bear", package = "koala-bear" }
symetric = { path = "../symetric", package = "symetric" }
utils = { path = "../utils", package = "utils" }
serde.workspace = true
parallel.workspace = true
