[package]
name = "poly"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "field" }
utils = { path = "../utils", package = "utils" }
system-info.workspace = true
parallel.workspace = true
zk-alloc.workspace = true

rand.workspace = true
serde.workspace = true

[dev-dependencies]
koala-bear = { path = "../koala-bear", package = "koala-bear" }
