[package]
name = "sumcheck"
version.workspace = true
edition.workspace = true

[dependencies]
field = { path = "../field", package = "field" }
air = { path = "../air", package = "air" }
poly = { path = "../poly", package = "poly" }
zk-alloc.workspace = true
fiat-shamir = { path = "../fiat-shamir", package = "fiat-shamir" }
parallel.workspace = true
tracing.workspace = true

[dev-dependencies]
koala-bear = { path = "../koala-bear", package = "koala-bear" }
